Fix CSS padding, overflow, and flexbox

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,16 +21,18 @@
     flex-direction: column;
     border-right: 4px solid #2D3142;
     min-width: 260px;
+    overflow: auto;
 }
 
 .AppHeader {
     margin: 0;
+    padding: 10px;
     background-color: #2D3142;
 }
 
 h1 {
     margin: 0;
-    padding: 5px;
+    line-height: 1.5rem;
     color: white;
 }
 
@@ -40,6 +42,11 @@ h1 {
         flex-direction: column;
         min-width: none;
         overflow: auto;
+    }
+
+    .AppMenu {
+        overflow: visible;
+        border: none;
     }
 
 }
