--- a/src/components/MemberList.module.css
+++ b/src/components/MemberList.module.css
@@ -1,5 +1,5 @@
 .MemberList {
-    flex-grow: 1;
+    flex: 1;
 }
 
 .MemberTable {
