--- a/src/components/StockList.module.css
+++ b/src/components/StockList.module.css
@@ -1,5 +1,5 @@
 .StockList {
-    flex-grow: 1;
+    flex: 1;
 }
 
 .StockTable {
